--- a/frontend/src/app/components/videoshome/videoshome.component.html
+++ b/frontend/src/app/components/videoshome/videoshome.component.html
@@ -1,11 +1,8 @@
-<div class="video-grid">
+<div class="video-grid" *ngIf="videos && videos.length > 0">
   <div *ngFor="let video of videos" class="video-item">
     <div class="video-wrapper">
-      <video>
-        <source [src]="video.thumbnailUrl" type="text/html">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    <a class="button" routerLink="{{ video.id }}">{{ video.title }}</a>
+      <img ngSrc="{{video.thumbnailurl}}" width="150" height="115.5" priority>
+    <a class="button" href="{{video.url}}"  target="_blank">{{ video.title }}</a>
   </div>
+</div>
 </div>
