--- a/frontend/src/app/components/videoshome/videoshome.component.css
+++ b/frontend/src/app/components/videoshome/videoshome.component.css
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .video-item {
@@ -12,7 +14,7 @@
   position: relative;
 }
 
-.video-item video {
+.video-item img {
   width: 100%;
   height: auto;
   display: block;
