adds pagination and page selectors

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
 
 <div class="login-container">
   <div class="header">
-    <h1>WORKSHOP</h1>
+    <h1>Birch Family Videos</h1>
   </div>
 
   <div class="login-form">
