--- a/frontend/src/app/components/videoshome/videoshome.component.css
+++ b/frontend/src/app/components/videoshome/videoshome.component.css
@@ -22,8 +22,48 @@
 }
 
 .video-title {
-  margin-top: 8px;
-  text-align: center;
   font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  color: white;
+}
+
+a:visited {
+  color: white;
+}
+
+a:hover {
+  color: #deb992;
+}
+
+.pagination-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination-buttons button {
+  background-color: #1a9f97;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 0 5px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  width: 100px; /* Set a fixed width for the buttons */
+}
+
+.pagination-buttons button:hover {
+  background-color: #deb992;
+}
+
+.pagination-buttons span {
+  font-size: 16px;
   font-weight: bold;
+  margin: 0 10px;
+  color: #1a9f97;
 }
