adjusts video styling on videohome

--- a/frontend/src/app/components/videoshome/videoshome.component.html
+++ b/frontend/src/app/components/videoshome/videoshome.component.html
@@ -1,7 +1,7 @@
 <div class="video-grid" *ngIf="videos && videos.length > 0">
   <div *ngFor="let video of videos" class="video-item">
     <div class="video-wrapper">
-      <a [href]="video.url" target="_blank">
+      <a [routerLink]="['/video', video.id]">
         <img [src]="video.thumbnailurl" width="150" height="115.5" priority>
       </a>
       <a class="video-title" [href]="video.url" target="_blank">{{ video.title }}</a>
@@ -11,5 +11,5 @@
 <div class="pagination-buttons">
   <button (click)="previousPage()" [disabled]="currentPage <= 0">Previous</button>
   <span>{{ currentPage + 1 }}</span>
-  <button (click)="nextPage()" [disabled]="currentPage === totalPages - 1">Next</button>
+  <button (click)="nextPage()" [disabled]="currentPage === 10">Next</button>
 </div>
