starting on the video component

--- a/frontend/src/app/components/video/video.component.html
+++ b/frontend/src/app/components/video/video.component.html
@@ -5,3 +5,4 @@
   </video>
 </div>
 <div *ngIf="video" class="video-title">{{ video.title }}</div>
+<button class="back-button" (click)="goBack()">Back</button>
