--- a/frontend/src/app/components/video/video.component.css
+++ b/frontend/src/app/components/video/video.component.css
@@ -1,22 +1,44 @@
 .video-wrapper {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .video-wrapper video {
   width: 70%;
   height: auto;
-  display: flex;
   border-radius: 8px;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  margin: auto;
 }
 
 .video-title {
-  margin-top: 10px;
-  text-align: left;
   font-size: 14px;
-  font-weight: bold;
-  margin-left: 15%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  color: white;
+  margin-top: 10px; /* Adjust margin as needed */
+}
+
+.back-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.back-button button {
+  background-color: #1a9f97;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 0 5px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.back-button button:hover {
+  background-color: #deb992;
 }
