--- a/frontend/src/app/components/videoshome/videoshome.component.html
+++ b/frontend/src/app/components/videoshome/videoshome.component.html
@@ -4,7 +4,7 @@
       <a [routerLink]="['/video', video.id]">
         <img [src]="video.thumbnailurl" width="150" height="115.5" priority>
       </a>
-      <a class="video-title" [href]="video.url" target="_blank">{{ video.title }}</a>
+      <a class="video-title" [routerLink]="['/video', video.id]">{{ video.title }}</a>
     </div>
   </div>
 </div>
