adjusts styling on video component

--- a/frontend/src/app/components/video/video.component.css
+++ b/frontend/src/app/components/video/video.component.css
@@ -18,7 +18,8 @@
   text-overflow: ellipsis;
   text-decoration: none;
   color: white;
-  margin-top: 10px; /* Adjust margin as needed */
+  margin-top: 10px;
+  margin-left: 15%;
 }
 
 .back-button {
@@ -26,19 +27,17 @@
   justify-content: center;
   margin-top: 20px;
   text-align: center;
-}
-
-.back-button button {
+  margin-left: 15%;
   background-color: #1a9f97;
   color: white;
   border: none;
   padding: 10px 20px;
-  margin: 0 5px;
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+
 }
 
-.back-button button:hover {
+.back-button:hover {
   background-color: #deb992;
 }
