--- a/frontend/src/app/components/video/video.component.html
+++ b/frontend/src/app/components/video/video.component.html
@@ -4,5 +4,27 @@
     Your browser does not support the video tag.
   </video>
 </div>
-<div *ngIf="video" class="video-title">{{ video.title }}</div>
+<div *ngIf="video" class="video-title" (click)="onClickTitle()" title="Change the title as an admin user">
+  {{ video.title }}
+</div>
+
+<ng-container *ngIf="video">
+  <app-title-update-modal
+    [isOpen]="isTitleModalOpen"
+    [currentTitle]="video.title"
+    (closeModal)="onCloseTitleModal()">
+  </app-title-update-modal>
+</ng-container>
+
+<div *ngIf="video" class="video-description" (click)="onClickDescription()"
+     title="Change the description as an admin user">{{ video.description }}
+</div>
+
+<ng-container *ngIf="video">
+  <app-description-update-modal
+    [isOpen]="isDescriptionModalOpen"
+    [currentDescription]="video.description"
+    (closeModal)="onCloseDescriptionModal()">
+  </app-description-update-modal>
+</ng-container>
 <button class="back-button" (click)="goBack()">Back</button>
