connects title update to backend and reloads page

--- a/frontend/src/app/components/title-update-modal/title-update-modal.component.html
+++ b/frontend/src/app/components/title-update-modal/title-update-modal.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="modal-buttons">
       <button [disabled]="newTitle.trim() === ''" (click)="updateTitle()">Accept</button>
-      <button (click)="onCloseModal()">Cancel</button>
+      <button (click)="CloseModal()">Cancel</button>
     </div>
   </div>
 </div>
