--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -13,6 +13,7 @@
         type="text"
         placeholder="username"
         [(ngModel)]="credentials.username"
+        (keydown.enter)="login()"
       />
     </div>
     <div class="input-group">
@@ -20,6 +21,7 @@
         type="password"
         placeholder="password"
         [(ngModel)]="credentials.password"
+        (keydown.enter)="login()"
       />
     </div>
     <button (click)="login()">LOGIN</button>
