--- a/frontend/src/app/components/signup/signup.component.css
+++ b/frontend/src/app/components/signup/signup.component.css
@@ -4,10 +4,10 @@ h1 {
   margin-bottom: 0;
 }
 
-.login-container {
+.signup-container {
   background-color: #051622;
   color: #fff;
-  height: 100vh;
+  /*height: 100vh;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,29 +19,35 @@ h1 {
   margin-bottom: 20px;
 }
 
-.login-form {
+.signup-form {
   border: 2px solid rgb(207, 178, 122);
   box-shadow: 1px 1px 5px white;
   padding: 10%;
+  padding-bottom: 0%;
   border-radius: 10px;
-  align-items: center;
 }
 
-.input-group {
-  margin-bottom: 15px;
+.form-group {
+  margin-bottom: 20px;
+  text-align: center;
   border: none;
 }
 
-.input-group input {
-  padding: 10px;
-  font-size: 16px;
+.form-group label {
   color: #1ba098;
+  font-size: 20px;
+}
+
+.form-group input {
+  width: 100%;
+  margin: 0 auto;
+  padding: 10px;
   background-color: #051622;
-  border-top: none;
-  border-left: none;
-  border-right: none;
+  color: #1ba098;
+  border: none;
   border-bottom: 4px solid white;
   text-align: center;
+  font-size: 16px;
 }
 
 button {
@@ -56,7 +62,7 @@ button {
   border-radius: 50px;
   cursor: pointer;
   margin-top: 50px;
-  margin-bottom: -5px;
+  margin-bottom: 50px;
   margin-left: 15%;
 }
 
