updates styles for user profile page

--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="loginError" class="alert alert-danger fade-out" role="alert">
+  There was an error creating a new user, please try again
+</div>
+
+
 <div class="signup-container">
   <div class="header">
     <h1>Create an Account</h1>
