--- a/frontend/src/app/components/signup/signup.component.css
+++ b/frontend/src/app/components/signup/signup.component.css
@@ -7,7 +7,6 @@ h1 {
 .signup-container {
   background-color: #051622;
   color: #fff;
-  /*height: 100vh;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,15 +38,15 @@ h1 {
 }
 
 .form-group input {
-  width: 100%;
-  margin: 0 auto;
   padding: 10px;
-  background-color: #051622;
+  font-size: 16px;
   color: #1ba098;
-  border: none;
+  background-color: #051622;
+  border-top: none;
+  border-left: none;
+  border-right: none;
   border-bottom: 4px solid white;
   text-align: center;
-  font-size: 16px;
 }
 
 button {
@@ -93,7 +92,7 @@ button:hover {
 }
 
 .fade-out {
-  animation: fadeOut 3s forwards;
+  animation: fadeOut 5s forwards;
 }
 
 @keyframes fadeOut {
