--- a/frontend/src/app/components/user-profile/user-profile.component.css
+++ b/frontend/src/app/components/user-profile/user-profile.component.css
@@ -1,20 +1,36 @@
+.header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+h1 {
+  font-weight: 100;
+  font-size: 50px;
+  margin-bottom: 0;
+}
+
 .user-profile {
   max-width: 600px;
   margin: auto;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: #051622;
 }
 
-.user-profile div {
-  margin-top: 20px;
+.user-info {
+  border: 2px solid rgb(207, 178, 122);
+  box-shadow: 1px 1px 5px white;
+  color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.user-profile p {
-  margin-bottom: 10px;
+.itemlabel {
+  color: #1ba098;
 }
 
-.user-profile h2 {
-  margin-bottom: 20px;
+p {
+  margin-bottom: 2%;
 }
