implements error handling on 'create user' page

--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -69,7 +69,8 @@
 }
 
 .modal-link,
-.logout-button {
+.logout-button,
+.profile-name {
   padding: 12px 20px;
   font-size: 18px;
   color: #1ba098;
@@ -84,6 +85,7 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
 
 .admin {
   color: #1ba098;
