creates About page

--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -4,6 +4,6 @@
   </div>
   <div class="info">
     <p>This site was created as a way for my family to view our digitized home videos. </p>
-    <p><span class="itemlabel"><a href="https://github.com/smbirch/homevideos">See my GitHub for more info</a></span></p>
+    <p><span class="item-label"><a href="https://github.com/smbirch/homevideos">See my GitHub for more info!</a></span></p>
   </div>
 </div>
