--- a/frontend/src/app/components/about/about.component.css
+++ b/frontend/src/app/components/about/about.component.css
@@ -25,6 +25,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .info a {
@@ -34,12 +35,12 @@ h1 {
 
 .info a:hover {
   text-decoration: underline;
+  color: #79ded7;
 }
 
 
-.itemlabel {
+.item-label {
   color: #1ba098;
-  text-align: center;
 }
 
 p {
