adjusts styling of navbar and videos page

--- a/frontend/src/app/components/video/video.component.css
+++ b/frontend/src/app/components/video/video.component.css
@@ -19,7 +19,7 @@
   text-decoration: none;
   color: white;
   margin-top: 10px;
-  margin-left: 15%;
+  /*margin-left: 15%;*/
   transition: color 0.3s ease;
 }
 
@@ -30,9 +30,19 @@
 .video-description {
   font-size: 12px;
   margin-top: 10px;
-  margin-left: 15%;
+  /*margin-left: 15%;*/
   color: white;
   transition: color 0.3s ease;
+}
+
+.info-section {
+  border-radius: 15px;
+  margin-left: 15%;
+  border: double #deb992;
+  padding-left: 2%;
+  padding-bottom: 1%;
+  margin-right: 15%;
+
 }
 
 .back-button {
