implements basic HTML for comments:

--- a/frontend/src/app/components/video/video.component.html
+++ b/frontend/src/app/components/video/video.component.html
@@ -30,8 +30,9 @@
       [videoId]="video.id"
       (closeModal)="onCloseDescriptionModal()"
       (descriptionUpdated)="updateDescription($event)">
-
     </app-description-update-modal>
   </ng-container>
 </div>
 <button class="back-button" (click)="goBack()">Back</button>
+
+<app-comments [videoId]="video.id"></app-comments>
