implements some css for comments: - adjusts sizes and adds dynamic buttons

--- a/frontend/src/app/components/comments/comments.component.css
+++ b/frontend/src/app/components/comments/comments.component.css
@@ -13,7 +13,7 @@
 }
 
 .comments-section textarea {
-  width: 100%;
+  width: 40%;
   height: 60px;
   margin-bottom: 10px;
 }
@@ -29,4 +29,8 @@
 
 .comments-section button:hover {
   background-color: #deb992;
+}
+
+.nocomment {
+  color: #1a9f97;
 }
