--- a/frontend/src/app/components/comments/comments.component.html
+++ b/frontend/src/app/components/comments/comments.component.html
@@ -8,11 +8,11 @@
   </div>
 
   <ng-template #noComments>
-    <p>No comments yet. Be the first to comment!</p>
+    <p class="nocomment">No comments yet. Be the first to comment!</p>
   </ng-template>
 
   <form (ngSubmit)="addComment()">
-    <textarea [(ngModel)]="newCommentText" name="commentText" required></textarea>
-    <button type="submit">Add Comment</button>
+    <textarea [(ngModel)]="newCommentText" name="commentText" placeholder="Leave a comment!" required></textarea>
+    <br><button type="submit">Add Comment</button>
   </form>
 </div>
