--- a/frontend/src/app/components/comment/comment.component.css
+++ b/frontend/src/app/components/comment/comment.component.css
@@ -8,9 +8,21 @@ small {
 
 button {
   margin: 8px 2px;
+  background-color: #1a9f97;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
-.comment {
-margin-bottom: 8px;
 
+
+.comment {
+  margin-bottom: 8px;
+
+}
+
+button:hover {
+  background-color: #deb992;
 }
