user must be logged in to leave a comment. user must be an admin to delete or edit comments. also fixes edit comments

--- a/frontend/src/app/components/comments/comments.component.html
+++ b/frontend/src/app/components/comments/comments.component.html
@@ -11,6 +11,10 @@
     <p class="nocomment">No comments yet. Be the first to comment!</p>
   </ng-template>
 
+  <div *ngIf="errorMessage" class="error-message">
+    {{ errorMessage }}
+  </div>
+
   <form (ngSubmit)="addComment()">
     <textarea [(ngModel)]="newCommentText" name="commentText" placeholder="Leave a comment!" required></textarea>
     <br><button type="submit">Add Comment</button>
