--- a/frontend/src/app/components/comment/comment.component.html
+++ b/frontend/src/app/components/comment/comment.component.html
@@ -2,12 +2,12 @@
   <p>{{ comment.text }}</p>
   <small>>> {{ comment.author }} on {{ comment.createdAt | date: 'MM/dd/yy' }}</small>
   <br>
-  <button *ngIf="!comment.deleted && !isEditing" (click)="onEdit()">Edit</button>
-  <button *ngIf="!comment.deleted && !isEditing" (click)="onDelete()">Delete</button>
+  <button *ngIf="isAdmin && !comment.deleted && !isEditing" (click)="onEdit()">Edit</button>
+  <button *ngIf="isAdmin && !comment.deleted && !isEditing" (click)="onDelete()">Delete</button>
 </div>
 
 <div *ngIf="isEditing" class="editing">
-<textarea [(ngModel)]="editedText"></textarea>
+  <textarea [(ngModel)]="editedText"></textarea>
   <br>
   <button (click)="saveEdit()">Save</button>
   <button (click)="cancelEdit()">Cancel</button>
