--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -5,7 +5,7 @@
   padding: 10px 0px;
   background-color: #051622;
   color: white;
-  margin: -8px 0px 0px 0px;
+  margin: -8px -7px 0;
   border: 1px solid #deb992;
 }
 
