experimenting with removing back button on video component

--- a/frontend/src/app/components/video/video.component.html
+++ b/frontend/src/app/components/video/video.component.html
@@ -33,6 +33,6 @@
     </app-description-update-modal>
   </ng-container>
 </div>
-<button class="back-button" (click)="goBack()">Back</button>
+<!--<button class="back-button" (click)="goBack()">Back</button>-->
 
 <app-comments [videoId]="video.id"></app-comments>
